<resources>
    <string name="app_name">SMA</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password" />
    <string name="register">Register</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_designation">Enter Designation</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_national_id_number">Enter National ID Number</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_password">Enter Password</string>
    <string name="registerbtn">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In Here</string>
    <string name="smart_monitoring_app">Smart Monitoring App</string>
    <string name="enter_work_station">Enter Work Station</string>
    <string name="login">Login</string>
    <string name="enter_department">Enter Department</string>
    <string name="Officer">Officer</string>
    <string name="worker">Worker</string>
    <string name="loginbtn">Login</string>
    <string name="enter_password_login">Enter Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="workstation" type="id">Workstation</string>
    <string name="designation" type="id">Designation</string>
    <string name="dob" type="id">Dob</string>
    <string name="logo">logo</string>
    <string name="about">About Us</string>
    <string name="profile">Profile</string>
    <string name="enter_email_login">Enter Email</string>
    <string name="newaccount">New account? Register Here</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="click_here">Click Here</string>
    <string name="profile_picture">profile picture</string>
    <string name="logout">Logout</string>
    <string name="about_us_texts">I will write about this app here</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="watch_us_on_youtube">Watch us on YouTube</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="news_feed">News Feed</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="submit">Submit</string>
    <string name="thank_you">Thank You Very Much!</string>
    <string name="very_disappointing">Very disappointing.</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback.</string>
    <string name="upload_post_here">Upload Post here...</string>
    <string name="add_photo">Add Photo</string>
    <string name="post">Post</string>
    <string name="average_rate">Average Rate: %.1f</string>
    <string name="num_people_rated">Number of people who have rated us: %d</string>
    <string name="average_rat">"Average Rate: "</string>
    <string name="number_of_people_who_have_rated_us">"Number of people who have rated us: "</string>
    <string name="celcius">45C</string>
    <string name="description">Haze</string>
    <string name="weather_text">Weather</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="write_your_designation_n_for_example_fpi_uno">Write your designation \n(For example: FPI / UNO)</string>
</resources>