<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@drawable/wave">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/basic"
                android:textSize="35sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/about_us_texts"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/web_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_our_website"
                android:autoLink="web"
                android:textColorLink="@color/basic"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/web_test"
                android:drawablePadding="10dp" />

            <TextView
                android:id="@+id/youtube_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_us_on_youtube"
                android:autoLink="web"
                android:textColorLink="@color/basic"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/yt"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/facebook_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_us_on_facebook"
                android:autoLink="web"
                android:textColorLink="@color/basic"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_marginStart="-5dp"
                app:drawableStartCompat="@drawable/fb"
                android:drawablePadding="7dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>