<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="430dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/basic" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif"
                android:layout_height="50dp"
                android:background="@drawable/textboxborder"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:hint="@string/enter_email_login"
                android:textColorHint="@color/basic"
                android:padding="8dp"
                android:textColor="@color/basic"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif"
                android:id="@+id/password"
                android:background="@drawable/textboxborder"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/enter_password_login"
                android:textColorHint="@color/basic"
                android:padding="8dp"
                android:textColor="@color/basic"
                android:textColorHighlight="@color/cardview_dark_background"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:fontFamily="sans-serif"
                android:layout_height="60dp"
                android:text="@string/loginbtn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/basic"
                app:cornerRadius = "20dp"/>

            <TextView
                android:id="@+id/newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/newaccount"
                android:textColor="@color/basic"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="@color/basic"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>