<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/weather_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/weather_text"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="@drawable/dashboard_background" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/celcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/basic"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/basic"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/date"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/basic"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/basic"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
       android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="200dp"
            android:fontFamily="sans-serif"
            android:layout_height="56dp"
            android:background="@drawable/textboxborder"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:hint="Search City Here"
            android:textColorHint="@color/basic"
            android:padding="8dp"
            android:textColor="@color/basic"
            android:autofillHints="postalAddress"
            android:inputType="textAutoComplete"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/basic"
            android:src="@drawable/search_white"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/level2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

               <TextView
                   android:id="@+id/pressure"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:textColor="@color/basic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/basic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/level3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="-30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/basic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Feels Like"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/minTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/basic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/min_temperature"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
